--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -31,3 +31,6 @@ label {
 .form-control-feedback {
 	font-size: $font-size-sm;
 }
+input.form-control.input-group-addon {
+	text-align: left;
+}
